@@ -17,7 +17,7 @@
 [[concurrencycdi]]
 == CDI Injection
 
-When `ManagedExecutor` and `ThreadContext` are used as CDI beans, the best practice is to define their producers as `@ApplicationScoped` so that instances are shared and reused. In most cases, more granular scopes are undesirable, such as having a new `ManagedExecutor` instance per request. In the event that a more granular scope is desired, the application must take care to supply a disposer to ensure that the executor is shut down once it is no longer needed. When using application scope, it is optional to supply a disposer because the specification requires the container to automatically shut down `ManagedExecutor` instances when the application stops.
+In order to use `ManagedExecutor` and `ThreadContext` as CDI beans, define producer for them as `@ApplicationScoped` so that instances are shared and reused. In most cases, more granular and shorter-lived scopes are undesirable. For instance, having a new `ManagedExecutor` instance created per HTTP request typically does not make sense. In the event that a more granular scope is desired, the application must take care to supply a disposer to ensure that the executor is shut down once it is no longer needed. When using application scope, it is optional to supply a disposer because the specification requires the container to automatically shut down `ManagedExecutor` instances when the application stops.
 
 ==== Example Producer for `ManagedExecutor`
 
@@ -36,7 +36,7 @@ import javax.inject.Qualifier;
 public @interface SecurityAndCDIContext {}
 ----
 
-Example producer,
+Example producer and disposer,
 [source, java]
 ----
 import org.eclipse.microprofile.concurrent.ManagedExecutor;
@@ -50,6 +50,10 @@ public class MyFirstBean {
     ManagedExecutor executor = ManagedExecutor.builder()
         .propagated(ThreadContext.SECURITY, ThreadContext.CDI)
         .build();
+
+    void disposeExecutor(@Disposes @SecurityAndCDIContext ManagedExecutor exec) {
+        exec.shutdownNow();
+    }
 }
 ----
 
